--- a/front/src/App.css
+++ b/front/src/App.css
@@ -53,7 +53,7 @@ html, body, #root, .App {
   color: white;
 }
 
-.App .header * {
+.App .header > * {
   display: inline-block;
 }
 
@@ -76,4 +76,8 @@ html, body, #root, .App {
   grid-area: queries;
   height: 100%;
   overflow-y: scroll;
+}
+
+.App .header .Select-clear {
+  display: none;
 }
